# dual_quaternion_verification

./: README.md  package.xml  setup.cfg  setup.py
dual_quaternion_verification/: make_dual_quaternion_videos.py  orientation_cost_comparison.py
