<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dual_quaternion_verification</name>
  <version>0.0.0</version>
  <description>Dual quaternion orientation/translation error verification plots.</description>
  <maintainer email="fernandorecalde@uti.edu.ec">fer</maintainer>
  <license>MIT</license>

  <exec_depend>python3</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
